Fix errors not showing in RecipeForm

--- a/resources/assets/scss/global/inputs.scss
+++ b/resources/assets/scss/global/inputs.scss
@@ -547,3 +547,23 @@
     color: $color-text-error;
     font-size: 13px;
 }
+
+.error-container {
+    display: block;
+    color: $color-text-error;
+
+    li {
+        color: $color-text-error;
+        font-size: 13px;
+    }
+
+    &:empty {
+        display: none;
+    }
+}
+
+.section-errors {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
